# tenstion_controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.cache/clangd/index/: buttons.c.413E216B2A841176.idx  buttons.h.D8E7CEB551A23F27.idx  control_manager.c.BCDF1DB35EE8EEC3.idx  control_manager.h.4951DADAF291F66A.idx  encoder_pcnt.c.2D9FD0FDFCE1298D.idx  encoder_pcnt.h.5B2D42782A345A90.idx  hx711.c.B8BA5E4B83F4F0CC.idx  hx711.h.793AD78323809F4F.idx  lcd_menu.c.5080F01A869C5F3F.idx  lcd_menu.h.72107DF24D687D66.idx  led_strip.h.543C69837C35B801.idx  (+35 more)
components/auto_tuner/: CMakeLists.txt  relay_feedback.c
components/button_handler/: CMakeLists.txt  buttons.c
components/control_manager/: CMakeLists.txt  control_manager.c
components/control_manager/include/: control_manager.h
components/data_logger/: CMakeLists.txt  logger.c
components/encoder_driver/: CMakeLists.txt  encoder_pcnt.c
components/lcd_interface/: CMakeLists.txt  lcd_menu.c
components/loadcell_driver/: CMakeLists.txt  hx711.c
components/motor_controller/: CMakeLists.txt  motor_pwm.c
components/pid_controller/: CMakeLists.txt  pi_controller.c
components/safety_monitor/: CMakeLists.txt  safety.c
components/web_interface/: CMakeLists.txt  idf_component.yml  web_pages.c  web_server.c  websocket_handler.c  wifi_manager.c
components/web_interface/include/: web_server.h  wifi_manager.h
components/web_interface/www/: app.js  index.html  style.css
docs/: TESTING.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  system_config.h
(+9 files in other folders)
