idf_component_register(
    SRCS 
        "wifi_manager.c"
        "web_server.c"
    INCLUDE_DIRS 
        "include"
    REQUIRES
        esp_wifi
        esp_http_server
        esp_event
        nvs_flash
        esp_netif
        esp_timer
        freertos
        json
        safety_monitor
    EMBED_FILES
        "www/index.html"
)
